--- a/app/src/main/res/drawable/fondo_promo.xml
+++ b/app/src/main/res/drawable/fondo_promo.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid
-        android:color="#F0FFFF"
+    <gradient
+
+        android:startColor="#35baa0"
+        android:centerColor="@color/white"
+        android:endColor="@color/white"
+        android:angle="90"
       />
   />
 
