--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -80,7 +80,6 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.916"
                                 app:layout_constraintStart_toEndOf="@+id/textView12"
-                                app:layout_constraintTop_toBottomOf="@+id/txt_sub_total_carrito"
                                 app:layout_constraintVertical_bias="0.545" />
 
                             <TextView
@@ -160,8 +159,7 @@
                                 android:layout_marginEnd="36dp"
                                 android:text="TextView"
                                 app:layout_constraintBottom_toTopOf="@+id/txt_total_compra"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/txt_descuento_carrito" />
+                                app:layout_constraintEnd_toEndOf="parent" />
 
                             <TextView
                                 android:id="@+id/textView14"
@@ -191,7 +189,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView1"
                         android:layout_width="match_parent"
-                        android:layout_height="110dp"
+                        android:layout_height="250dp"
                         android:layout_gravity="center"
 
                         app:cardCornerRadius="25dp"
@@ -205,11 +203,11 @@
 
                             <ImageView
                                 android:id="@+id/imagen1"
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:layout_marginStart="8dp"
                                 android:src="@drawable/entrega"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:layout_marginTop="10dp"
                                 app:layout_constraintEnd_toStartOf="@+id/textVie"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -220,7 +218,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
                                 android:text="Método de entrega"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:layout_marginTop="10dp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.377"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -231,8 +229,8 @@
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_marginRight="20dp"
+                                android:layout_marginTop="10dp"
                                 android:src="@drawable/flecha_hacia_abajo"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -241,11 +239,24 @@
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
                                 android:src="@drawable/comprobado_adobe_express"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView1"
                                 app:layout_constraintHorizontal_bias="0.8"
                                 app:layout_constraintStart_toEndOf="@+id/textVie"
                                 app:layout_constraintTop_toTopOf="parent" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/contenedorMetodoEntrega"
+                                android:layout_width="350dp"
+                                android:layout_height="150dp"
+                                android:orientation="horizontal"
+                                android:paddingLeft="20dp"
+                                android:paddingRight="30dp"
+                                android:paddingTop="10dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/textVie"
+                                tools:listitem="@layout/item_entrega" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
