--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -189,7 +189,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView1"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="110dp"
                         android:layout_gravity="center"
 
                         app:cardCornerRadius="25dp"
@@ -207,7 +207,7 @@
                                 android:layout_height="40dp"
                                 android:layout_marginStart="8dp"
                                 android:src="@drawable/entrega"
-                                android:layout_marginTop="10dp"
+                                android:layout_marginTop="20dp"
                                 app:layout_constraintEnd_toStartOf="@+id/textVie"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -218,7 +218,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
                                 android:text="Método de entrega"
-                                android:layout_marginTop="10dp"
+                                android:layout_marginTop="30dp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.377"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +229,7 @@
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_marginRight="20dp"
-                                android:layout_marginTop="10dp"
+                                android:layout_marginTop="30dp"
                                 android:src="@drawable/flecha_hacia_abajo"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -238,6 +238,7 @@
                                 android:id="@+id/check1"
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
+                                android:layout_marginTop="30dp"
                                 android:src="@drawable/comprobado_adobe_express"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView1"
                                 app:layout_constraintHorizontal_bias="0.8"
@@ -250,8 +251,9 @@
                                 android:layout_height="150dp"
                                 android:orientation="horizontal"
                                 android:paddingLeft="20dp"
-                                android:paddingRight="30dp"
                                 android:paddingTop="10dp"
+                                android:paddingRight="30dp"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
