--- a/app/src/main/res/layout/item_entrega.xml
+++ b/app/src/main/res/layout/item_entrega.xml
@@ -29,6 +29,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="50dp"
+
+            android:layout_marginTop="5dp"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,26 +42,39 @@
             android:id="@+id/nombre_metodo_entrega"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Combo de Limpieza"
             android:textColor="@color/textColorPrimary2"
-            android:textSize="14sp"
 
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.763"
+            app:layout_constraintHorizontal_bias="0.673"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.384" />
 
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:text=""
+        <RadioGroup
+            android:id="@+id/group_entrega"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imagen_metodo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <RadioButton
+                android:id="@+id/radio_entrega"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="10dp"
+                android:text="" />
+        </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
