--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -279,10 +279,11 @@
                                 android:id="@+id/imagen2"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="20dp"
                                 android:src="@drawable/ubicacion__1_"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/textView10"
-                                app:layout_constraintHorizontal_bias="0.73"
+                                app:layout_constraintHorizontal_bias="0.416"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -290,10 +291,10 @@
                                 android:id="@+id/textView10"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="30dp"
                                 android:text="Dirección de entrega"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.33"
+                                app:layout_constraintHorizontal_bias="0.361"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -301,9 +302,8 @@
                                 android:id="@+id/imageView2"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
-                                android:layout_marginRight="20dp"
+                                android:layout_marginTop="20dp"
                                 android:src="@drawable/flecha_hacia_abajo"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -311,13 +311,10 @@
                                 android:id="@+id/check2"
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
+                                android:layout_marginTop="20dp"
                                 android:src="@drawable/comprobado_adobe_express"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                                app:layout_constraintHorizontal_bias="0.83"
-                                app:layout_constraintStart_toEndOf="@+id/textView10"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.491" />
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/contenedorUbicacionEntrega"
@@ -335,7 +332,7 @@
                                 tools:listitem="@layout/item_entrega" />
 
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
