--- a/app/src/main/res/layout/fragment_somos.xml
+++ b/app/src/main/res/layout/fragment_somos.xml
@@ -11,16 +11,34 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@drawable/prodiser"/>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="18sp"
+            android:layout_marginTop="50dp"
+            android:text="Somos una empresa dedicada a la fabricación y comercialización de productos de limpieza e higiene, brindamos al cliente satisfacción plena, ofreciendo productos de calidad, con un servicio eficiente y eficaz en el momento oportuno." />
+
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginTop="40dp"
-            android:text="Somos una empresa dedicada a la fabricación y comercialización de productos de limpieza e higiene, brindamos al cliente satisfacción plena, ofreciendo productos de calidad, con un servicio eficiente y eficaz en el momento oportuno." />
-
+            android:text="Ser una empresa líder y reconocida por su alto estándar de calidad en el rubro dentro del mercado nacional."/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,13 +51,14 @@
                 android:id="@+id/imageView3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                tools:src="@drawable/verapa" />
+                app:srcCompat="@drawable/verapa"
+                android:layout_marginRight="20dp"/>
 
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                tools:src="@drawable/plus" />
+                app:srcCompat="@drawable/plus"/>
         </LinearLayout>
 
     </LinearLayout>
