--- a/app/src/main/res/layout/item_direcciones_entrega.xml
+++ b/app/src/main/res/layout/item_direcciones_entrega.xml
@@ -44,9 +44,9 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Combo de Limpieza"
-            android:textColor="@color/black"
+            android:textColor="@color/pinkColor"
+
             android:textSize="13sp"
-            android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
