--- a/app/src/main/res/layout/item_entrega.xml
+++ b/app/src/main/res/layout/item_entrega.xml
@@ -46,7 +46,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Combo de Limpieza"
-            android:textColor="@color/textColorPrimary2"
+            android:textColor="@color/pinkColor"
 
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
