--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -126,11 +126,9 @@
                                 android:id="@+id/tt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="1dp"
                                 android:text="Sub Total"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
-                                android:layout_marginBottom="5dp"
                                 app:layout_constraintBottom_toTopOf="@+id/textView12"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_sub_total_compra"
                                 app:layout_constraintHorizontal_bias="0.169"
@@ -517,7 +515,7 @@
                         android:id="@+id/cardView4"
                         android:layout_width="match_parent"
                         android:layout_height="90dp"
-
+android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_gravity="center"
@@ -530,6 +528,21 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/contenedorMetodoEntrega"
+                                android:layout_width="350dp"
+                                android:layout_height="150dp"
+                                android:orientation="horizontal"
+                                android:paddingLeft="20dp"
+                                android:paddingTop="10dp"
+                                android:paddingRight="30dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/textVie"
+                                tools:listitem="@layout/item_entrega" />
 
                             <ImageView
                                 android:id="@+id/chec4_bien"
@@ -586,7 +599,6 @@
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView4"
                                 app:layout_constraintHorizontal_bias="0.831"
-                                app:layout_constraintStart_toEndOf="@+id/textView6"
                                 app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
@@ -661,7 +673,23 @@
 
 
                 </LinearLayout>
-
+                <Button
+                    android:id="@+id/btn_enviarPedido"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="24dp"
+                    android:elevation="15dp"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:text="Guardar"
+                    android:textAllCaps="false"
+                    android:textColor="@color/textColor"
+                    android:textSize="17sp"
+                    app:backgroundTint="@color/pinkColor"
+                    app:shapeAppearanceOverlay="@style/Button4" />
             </LinearLayout>
         </ScrollView>
 
